# segment_consistency

./: .gitignore  PRD.md
.claude/: settings.local.json
segment_consistency/: pyproject.toml
segment_consistency/configs/: default.yaml
segment_consistency/experiments/: run_agreement.py  run_balance.py  run_boundary.py  run_variation.py
segment_consistency/results/agreement/: by_genre.json  results.json  summary.json
segment_consistency/results/balance/: checkpoint.json
segment_consistency/results/balance/checkpoints/: none_coarse_best.pt  none_fine_best.pt  resample_coarse_best.pt  weighted_loss_coarse_best.pt
segment_consistency/results/balance/logs/: none_coarse.json  none_fine.json  resample_coarse.json  weighted_loss_coarse.json
segment_consistency/results/boundary/: checkpoint.json  comparison_table.json
segment_consistency/results/boundary/checkpoints/: cnn_cc_best.pt  cnn_cf_best.pt  cnn_fc_best.pt  cnn_ff_best.pt
segment_consistency/results/boundary/logs/: cnn_cc.json  cnn_cf.json  cnn_fc.json  cnn_ff.json
segment_consistency/results/variation/: stats.json
segment_consistency/scripts/: plot_results.py  precompute_mels.py
segment_consistency/src/: agreement.py  data.py  dataset.py  evaluate.py  model.py  train.py  utils.py
segment_consistency/tests/: test_agreement.py  test_data.py  test_model.py  test_pipeline.py
