[project]
name = "segment-consistency"
version = "0.1.0"
description = "Hierarchical segment label consistency in music structure analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "librosa>=0.10",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "trackio[apple-gpu]",
    "tqdm>=4.66",
    "mir_eval>=0.7",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
